--- a/fundsServiceClient/src/app/funds/funds.component.html
+++ b/fundsServiceClient/src/app/funds/funds.component.html
@@ -1,4 +1,4 @@
-<div>
+<div style="align-content: center">
     <p-dataTable [value]="funds" selectionMode="single" [(selection)]="selectedFund" (onRowSelect)="onRowSelect($event)" [paginator]="true" [rows]="10" [responsive]="true">
         <header>Funds Service</header>
         <p-column field="fundName" header="Fund Name" [sortable]="true"></p-column>
@@ -6,27 +6,27 @@
         <p-column field="goal" header="Goal" [sortable]="true"></p-column>
         <p-column field="noOfYears" header="No of Years" [sortable]="true"></p-column>
         <p-column field="fundAmount" header="Fund Amount" [sortable]="true"></p-column>
-        <p-column field="totalFundDetails" header="Total Fund Details" [sortable]="true"></p-column>
+       <!-- <p-column field="totalFundDetails" header="Total Fund Details" [sortable]="true"></p-column> -->
         <footer><div class="ui-helper-clearfix" style="width:100%"><button type="button" pButton icon="fa-plus" style="float:left" (click)="showDialogToAdd()" label="Add"></button></div></footer>
     </p-dataTable>
 
     <p-dialog header="Funds Details" [(visible)]="displayDialog" [responsive]="true" showEffect="fade" [modal]="true">
         <div class="ui-grid ui-grid-responsive ui-fluid ui-grid-pad" *ngIf="fund">
             <div class="ui-grid-row">
-                <div class="ui-grid-col-4"><label for="<fundName></fundName>">Fund Name</label></div>
-                <div class="ui-grid-col-8"><input pInputText id="fundName" [(ngModel)]="funds.fundsName" /></div>
+                <div class="ui-grid-col-4"><label for="fundName">Fund Name</label></div>
+                <div class="ui-grid-col-8"><input pInputText id="fundName" [(ngModel)]="fund.fundName" /></div>
             </div>
             <div class="ui-grid-row">
                 <div class="ui-grid-col-4"><label for="monthlyFundAmount">Monthly Fund Amount</label></div>
-                <div class="ui-grid-col-8"><input pInputText id="monthlyFundAmount" [(ngModel)]="funds.monthlyFundAmount" /></div>
+                <div class="ui-grid-col-8"><input pInputText id="monthlyFundAmount" [(ngModel)]="fund.monthlyFundAmount" /></div>
             </div>
             <div class="ui-grid-row">
                 <div class="ui-grid-col-4"><label for="goal">Goal</label></div>
-                <div class="ui-grid-col-8"><input pInputText id="goal" [(ngModel)]="funds.goal" /></div>
+                <div class="ui-grid-col-8"><input pInputText id="goal" [(ngModel)]="fund.goal" /></div>
             </div>
              <div class="ui-grid-row">
                 <div class="ui-grid-col-4"><label for="noOfYears">No Of Years</label></div>
-                <div class="ui-grid-col-8"><input pInputText id="noOfYears" [(ngModel)]="funds.noOfYears" /></div>
+                <div class="ui-grid-col-8"><input pInputText id="noOfYears" [(ngModel)]="fund.noOfYears" /></div>
             </div>
         </div>
 		<footer>
