--- a/fundsServiceClient/src/app/app.component.html
+++ b/fundsServiceClient/src/app/app.component.html
@@ -1,4 +1,49 @@
-<!--<h1>
-  {{title}}
-</h1>-->
-<app-funds></app-funds>
+
+
+			<!-- Content -->
+				<div id="content-wrapper">
+					<div id="content">
+						<div class="container">
+							<div class="row">
+								<div class="3u 12u(mobile)">
+
+									<!-- Left Sidebar -->
+										<section>
+											<header>
+												<h2>Other Details</h2>
+											</header>
+											<p>
+												Vehicula fermentum ligula at pretium. Suspendisse semper iaculis eros, eu aliquam
+												iaculis. Phasellus ultrices diam sit amet orci lacinia sed consequat.
+											</p>
+											<ul class="link-list">
+												<li><a href="#">Sed dolore viverra</a></li>
+												<li><a href="#">Ligula non varius</a></li>
+												<li><a href="#">Dis parturient montes</a></li>
+												<li><a href="#">Nascetur ridiculus</a></li>
+											</ul>
+										</section>
+								</div>
+								<div class="9u 12u(mobile) important(mobile)">
+
+									<!-- Main Content -->
+										<section>
+											<header>
+												<h2>My PrimeNG Table</h2>
+												<h3>My Investment Details</h3>
+											</header>
+											
+											
+											<app-funds></app-funds>
+											
+										</section>
+
+								</div>
+							
+							</div>
+						</div>
+					</div>
+				</div>
+
+			
+		
